# invasivelens

./: .gitignore  .pre-commit-config.yaml  DEFENSE_QA.md  MASTER_DEFENSE_GUIDE.md  PRESENTATION_TEMPLATE.md  README.md  SIMPLE_START.md  START_HERE.md  TECHNICAL_REPORT.md  config.py  pyproject.toml  requirements.txt
manifests/: combined_manifest.csv  floralens_manifest.csv  gbif_dl_manifest.csv  synthetic_manifest.csv
scripts/: analyze_available_data.py
src/: __init__.py  api.py  cli.py  compare_models.py  decision_engine.py  evaluate.py  hyperparameter_search.py  inference.py  train.py  workflow.py
src/data/: augmentation.py  dataset.py  download_floralens.py  download_gbif_dl.py  download_invasoras.py  download_utils.py  generate_synthetic_fixture.py  import_local_data.py  import_real_data.py  import_user_downloads.py  inspect_counts.py  merge_manifests.py  paths.py  quality.py  splits.py  versioning.py
src/explain/: export_gradcam.py  gradcam.py
src/models/: baseline_cnn.py  transfer_models.py
tests/: test_decision_engine.py  test_evaluate.py  test_godmode.py  test_gradcam.py  test_inference.py  test_models.py  test_quality.py  test_splits.py
